# Copyright (C) 2019 Intel Corporation. All rights reserved.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

cmake_minimum_required(VERSION 3.14)

project(wasm_vm_runtime_lifecycle_test)

add_definitions(-DRUN_ON_LINUX)
add_definitions(-Dattr_container_malloc=malloc)
add_definitions(-Dattr_container_free=free)

set(WAMR_BUILD_APP_FRAMEWORK 1)
set(WAMR_BUILD_INTERP 1)
set(WAMR_BUILD_AOT 1)
set(WAMR_BUILD_JIT 0)
set(WAMR_BUILD_FAST_INTERP 1)
set(WAMR_BUILD_APP_FRAMEWORK 1)
set(CMAKE_BUILD_TYPE Debug)

include(../../unit_common.cmake)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

set(unit_test_sources
    wasm_vm_runtime_lifecycle_test.cc
    ${PLATFORM_SHARED_SOURCE}
    ${UTILS_SHARED_SOURCE}
    ${MEM_ALLOC_SHARED_SOURCE}
    ${LIB_HOST_AGENT_SOURCE}
    ${NATIVE_INTERFACE_SOURCE}
    ${LIBC_BUILTIN_SOURCE}
    ${LIBC_WASI_SOURCE}
    ${IWASM_COMMON_SOURCE}
    ${IWASM_INTERP_SOURCE}
    ${IWASM_AOT_SOURCE}
    ${IWASM_COMPL_SOURCE}
    ${WASM_APP_LIB_SOURCE_ALL}
    ${UNCOMMON_SHARED_SOURCE}
)

add_executable(wasm_vm_runtime_lifecycle_test ${unit_test_sources})

target_link_libraries(wasm_vm_runtime_lifecycle_test ${LLVM_AVAILABLE_LIBS} gtest_main)

gtest_discover_tests(wasm_vm_runtime_lifecycle_test)